--- a/templates/Theme/base.php.twig
+++ b/templates/Theme/base.php.twig
@@ -130,6 +130,14 @@
     }
 {% endblock %}
 
+{%- block assocation_many_to_one_owning_set -%}
+    {{ block('assocation_one_to_one_unidirectional_set') }}
+{%- endblock -%}
+
+{%- block assocation_many_to_one_unidirectional_set -%}
+    {{ block('assocation_one_to_one_unidirectional_set') }}
+{%- endblock -%}
+
 {# Associations To Many #}
 
 {% block assocation_to_many_get %}
