--- a/templates/Theme/base.php.twig
+++ b/templates/Theme/base.php.twig
@@ -60,7 +60,7 @@
         {% if hintParts|length > 1 %}
             {{ hintParts|join('|') }}|null
         {% else %}
-            ?{{ hintParts|join('|') }}
+            {{ helper.isNullable(reflectionProperty) ? '?' : '' }}{{ hintParts|join('|') }}
         {% endif %}
     {% endif %}
 {% endblock %}
@@ -85,14 +85,14 @@
 {# Enum #}
 
 {% block enum_get %}
-    public function {{ methodName }}(): ?{{ enumAlias }}
+    public function {{ methodName }}(): {{ helper.isNullable(reflectionProperty) ? '?' : '' }}{{ enumAlias }}
     {
         return $this->{{ fieldName }};
     }
 {% endblock %}
 
 {% block enum_set %}
-    public function {{ methodName }}(?{{ enumAlias }} ${{ variableName }}): self
+    public function {{ methodName }}({{ helper.isNullable(reflectionProperty) ? '?' : '' }}{{ enumAlias }} ${{ variableName }}): self
     {
         $this->{{ fieldName }} = ${{ variableName }};
 
@@ -103,14 +103,14 @@
 {# Embedded #}
 
 {% block embedded_get %}
-    public function {{ methodName }}(): ?{{ targetClassAlias }}
+    public function {{ methodName }}(): {{ helper.isNullable(reflectionProperty) ? '?' : '' }}{{ targetClassAlias }}
     {
         return $this->{{ fieldName }};
     }
 {% endblock %}
 
 {% block embedded_set %}
-    public function {{ methodName }}(?{{ targetClassAlias }} ${{ variableName }}): self
+    public function {{ methodName }}({{ helper.isNullable(reflectionProperty) ? '?' : '' }}{{ targetClassAlias }} ${{ variableName }}): self
     {
         $this->{{ fieldName }} = ${{ variableName }};
 
@@ -121,14 +121,14 @@
 {# Associations To One #}
 
 {% block assocation_to_one_get %}
-    public function {{ methodName }}(): ?{{ targetEntityAlias }}
+    public function {{ methodName }}(): {{ helper.isNullable(reflectionProperty) ? '?' : '' }}{{ targetEntityAlias }}
     {
         return $this->{{ fieldName }};
     }
 {% endblock %}
 
 {% block assocation_one_to_one_unidirectional_set %}
-    public function {{ methodName }}(?{{ targetEntityAlias }} ${{ variableName }}): self
+    public function {{ methodName }}({{ helper.isNullable(reflectionProperty) ? '?' : '' }}{{ targetEntityAlias }} ${{ variableName }}): self
     {
         $this->{{ fieldName }} = ${{ variableName }};
 
